[#400] add descriptioin for generic resource

--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -3,7 +3,13 @@
 {% block main %}
     <h2>Description of HydroShare Resource Types and Metadata Terms</h2>
     <h3>Generic Resource Type Description</h3>
-    <div>[TODO:Describe generic resource type here]</div>
+    <p>A generic resource is an arbitrary collection of files that are logically grouped together as a resource.
+        There may be any number of files, and files may be of any type.
+        The generic resource type should be used for creating resources for which a formal content data model has not been specified in HydroShare.
+        Generic resources are treated the same way as other resource types in terms of sharing and access control;
+        however, no value added tools are provided given that HydroShare cannot anticipate what the contents of generic resources will be.
+    </p>
+
     <h3> Time Series Resource Type Description</h3>
     <p>The time series is a sequence of individual data values that are ordered in time to record the
         changing trend of a certain phenomenon. As time series are widely used for hydrologic research
