Add Model Instance metadata elements and their definitions

--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -89,6 +89,21 @@
     <div>[TODO:Describe model program resource type metadata terms here]</div>
 
     <h3>Model Instance Resource Type Description</h3>
+    <p>
+        <ul>
+            <li><strong>hsterms:ModelOutput:</strong> HydroShare Class that includes all the metadata elements related to Model Instance resource output files.</li>
+                <ul>
+                    <li><strong>hsterms:ModelOutput / hsterms:IncludesModelOutput:</strong> This metadata element is used to show if the output files are included with the
+                        uploaded input files or not.</li>
+                </ul>
+            <li><strong>hsterms:ExecutedBy:</strong> HydroShare Class that includes the information about the Model Program resource that is used to execute the Model Instance resource.</li>
+                <ul>
+                    <li><strong>hsterms:ExecutedBy / hsterms:ModelProgramName:</strong> In front of this this metadata element, there is a drop list for all of the available Model Program resources
+                        in the HydroShare system so the user can choose the required Model Program resource that used to executed the Model Instance resource.</li>
+                    <li><strong>hsterms:ExecutedBy / hsterms:ModelProgramURL:</strong></li> The URL of the choosen Model Program resource in the HydroShare.</li>
+                </ul>
+        </ul>
+    </p>
     <div>[TODO:Describe model instance resource type here]</div>
     <div>[TODO:Describe model instance resource type metadata terms here]</div>
 
