Add Model Program metadata elements and their definitions

--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -85,6 +85,21 @@
     </p>
 
     <h3>Model Program Resource Type Description</h3>
+    <p>
+        <ul>
+            <li><strong>dc:license:</strong> The license for the program and source code (e.g., GPL).</li>
+            <li><strong>hsterms:ModelVersionNumber:</strong> Model version including a build number (e.g., SWAT2012 rev. 629).</li>
+            <li><strong>hsterms:ModelProgramLanguage:</strong> Programming language used to create model (e.g., C++).</li>
+            <li><strong>hsterms:SupportedOperatingSystem:</strong>Compatible operating systems (e.g., Mac OS X version 10.7 and later).</li>
+            <li><strong>hsterms:ModelReleaseDate:</strong> Date that the model was released.</li>
+            <li><strong>hsterms:ModelReleaseNotes:</strong>Release notes for Model Program resource.</li>
+            <li><strong>hsterms:ModelWebpage:</strong> URL for Model Program resource webpage maintained by the model developers.</li>
+            <li><strong>hsterms:CodeRepository:</strong> URL for project page in a code repository (e.g., Github, Bitbucket, Google Code, etc.).</li>
+            <li><strong>hsterms:hasModelUserManual:</strong> Documentations that describe the use of the model.</li>
+            <li><strong>hsterm:hasModelTheoreticalManual:</strong> Documentations that describe the process representations within the model.</li>
+            <li><strong>hsterms:hasSourceCode:</strong> The source code used to build the Model Program.</li>
+        </ul>
+    </p>
     <div>[TODO:Describe model program resource type here]</div>
     <div>[TODO:Describe model program resource type metadata terms here]</div>
 
