initial steps to add oauth server and cors headers

--- a/theme/templates/accounts/account_login.html
+++ b/theme/templates/accounts/account_login.html
@@ -31,6 +31,9 @@
                 {% include "includes/checkbox_field.html" with field=form.password  field_classes="col-md-12" %}
             </div>
 
+            <!-- robline: putting this here to test oauth login -->
+            <input type="hidden" name="next" value="{{ next }}" />
+
             {% block account_form_actions %}
                 <div class="row">
                     <div class="col-md-12">
