--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -85,7 +85,10 @@
     </p>
 
     <h3>Model Program Resource Type Description</h3>
-    <p>
+    <p> A Model Program resource type is the executable file containing the model's logic and computational engine. The Model Program resource type consists of
+        the source code or compiled software for executing the model in addition to any documentation related to the model (e.g. user manual and theoretical manual).
+        Beyond the Dublin Core terms, this resource type has the following metadata elements to adequately describe the model:
+
         <ul>
             <li><strong>dc:license:</strong> The license for the program and source code (e.g., GPL).</li>
             <li><strong>hsterms:ModelVersionNumber:</strong> Model version including a build number (e.g., SWAT2012 rev. 629).</li>
@@ -95,16 +98,16 @@
             <li><strong>hsterms:ModelReleaseNotes:</strong>Release notes for Model Program resource.</li>
             <li><strong>hsterms:ModelWebpage:</strong> URL for Model Program resource webpage maintained by the model developers.</li>
             <li><strong>hsterms:CodeRepository:</strong> URL for project page in a code repository (e.g., Github, Bitbucket, Google Code, etc.).</li>
-            <li><strong>hsterms:hasModelUserManual:</strong> Documentations that describe the use of the model.</li>
-            <li><strong>hsterm:hasModelTheoreticalManual:</strong> Documentations that describe the process representations within the model.</li>
+            <li><strong>hsterms:hasModelUserManual:</strong> Documentation that describes the use of the model.</li>
+            <li><strong>hsterm:hasModelTheoreticalManual:</strong> Documentation that describes the processes represented within the model.</li>
             <li><strong>hsterms:hasSourceCode:</strong> The source code used to build the Model Program.</li>
         </ul>
     </p>
-    <div>[TODO:Describe model program resource type here]</div>
-    <div>[TODO:Describe model program resource type metadata terms here]</div>
 
     <h3>Model Instance Resource Type Description</h3>
-    <p>
+    <p> A Model Instance resource type is the data input and output files for a general hydrological model run for a specific time and place.
+        In addition to the Dublin Core metadata elements, this resource type has specific metadata elements to describe the file content and
+        the relationship between the Model Program and Model Instance resource types. These specific metadata elements are as follows:
         <ul>
             <li><strong>hsterms:ModelOutput:</strong> HydroShare Class that includes all the metadata elements related to Model Instance resource output files.</li>
                 <ul>
@@ -113,58 +116,56 @@
                 </ul>
             <li><strong>hsterms:ExecutedBy:</strong> HydroShare Class that includes the information about the Model Program resource that is used to execute the Model Instance resource.</li>
                 <ul>
-                    <li><strong>hsterms:ExecutedBy / hsterms:ModelProgramName:</strong> In front of this this metadata element, there is a drop list for all of the available Model Program resources
-                        in the HydroShare system so the user can choose the required Model Program resource that used to executed the Model Instance resource.</li>
-                    <li><strong>hsterms:ExecutedBy / hsterms:ModelProgramURL:</strong></li> The URL of the choosen Model Program resource in the HydroShare.</li>
+                    <li><strong>hsterms:ExecutedBy / hsterms:ModelProgramName:</strong> For this metadata element, there is a drop-down list of the available Model Program resources
+                        in the HydroShare system.The user chooses the Model Program resource to be executed using the Model Instance resource files.</li>
+                    <li><strong>hsterms:ExecutedBy / hsterms:ModelProgramURL:</strong></li> The URL of the choosen Model Program resource in HydroShare.</li>
                 </ul>
         </ul>
     </p>
-    <div>[TODO:Describe model instance resource type here]</div>
-    <div>[TODO:Describe model instance resource type metadata terms here]</div>
 
     <h3>SWAT Model Instance Resource Type Description</h3>
-    <p>
+    <p> SWAT Model Instance resource type is a specific Model Instance resource type for a specific hydrological model (SWAT). It is an extension of the Model Instance resource type.
+        The SWAT Model Instance resource type is implemented by extending the Model Instance resource type metadata resource to accommodate metadata elements
+        required to specifically describe the SWAT model and its input files. These specific metadata elements are as follows:
         <ul>
-            <li><strong>hsterms:ModelObjective:</strong>The objective of building this Model Instance resource. This objective could be one or more of the following control vocabularies:
-                Hydrology, Water quality, BMPs, and Climate / Landuse Change. Also the user can add any other objectives.</li>
-            <li><strong>hsterms:SimulationType:</strong>The type of the simulation used in the SWAT Model Instance resource type. This simulation type could be one of the following controlled
+            <li><strong>hsterms:ModelObjective:</strong>The objective of building this SWAT Model Instance resource. This objective could be one or more of the following control vocabularies:
+                Hydrology, Water quality, BMPs, and Climate / Landuse Change. The user can also add a custom objective.</li>
+            <li><strong>hsterms:SimulationType:</strong>The type of the simulation used in the SWAT Model Instance resource type. This could be one of the following controlled
                 vocabularies: Normal Simulation, Sensitivity Analysis, and Auto-Calibration.</li>
             <li><strong>hsterms:ModelInput:</strong>HydroShare Class that includes all the metadata elements related to SWAT Model Instance resource input files</li>
                 <ul>
-                    <li><strong>hsterms:ModelInput / hsterms:warm-upPeriodType:</strong>The SWAT Model warm-up period type. Always is year.</li>
+                    <li><strong>hsterms:ModelInput / hsterms:warm-upPeriodType:</strong>The SWAT Model warm-up period type. Always in years.</li>
                     <li><strong>hsterms:ModelInput / hsterms:warm-upPeriodValue:</strong>The SWAT Model warm-up period value in years.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:rainfallTimeStepType:</strong>The time step type used within the rainfall data in the SWAT Model Instance resource type input files.
+                    <li><strong>hsterms:ModelInput / hsterms:rainfallTimeStepType:</strong>The time step type used within the rainfall data in the SWAT Model Instance resource input files.
                         This metadata element has control vocabularies: Daily, and Sub-hourly.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:rainfallTimeStepValue:</strong>The time step value used within the rainfall data in the SWAT Model Instance resource type input files.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:routingTimeStepType:</strong>The time step type used within the model routing in the SWAT Model Instance resource type input files.
+                    <li><strong>hsterms:ModelInput / hsterms:rainfallTimeStepValue:</strong>The time step value used within the rainfall data in the SWAT Model Instance resource input files.</li>
+                    <li><strong>hsterms:ModelInput / hsterms:routingTimeStepType:</strong>The time step type used within the model routing in the SWAT Model Instance resource input files.
                         This metadata element has control vocabularies: Daily, and Hourly.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:routingTimeStepValue:</strong>The time step value used within the model routing in the SWAT Model Instance resource type input files.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:simulationTimeStepType:</strong>The time step type used for simulating the SWAT Model Instance resource type. This metadata element
+                    <li><strong>hsterms:ModelInput / hsterms:routingTimeStepValue:</strong>The time step value used within the model routing in the SWAT Model Instance resource input files.</li>
+                    <li><strong>hsterms:ModelInput / hsterms:simulationTimeStepType:</strong>The time step type used for simulating the SWAT Model Instance resource. This metadata element
                         has control vocabularies: Annual, Monthly, Daily, and Hourly.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:simulationTimeStepValue:</strong>The time step value used for simulating the SWAT Model Instance resource type.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:watershedArea:</strong>The watershed area in Km&sup2 in the SWAT Model Instance resource type input files.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:numberOfSubbasins:</strong>The number of the subbasin within the watershed in the SWAT Model Instance resource type input files.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:numberOfHRUs:</strong>The number of the Hydrologic Response Units within the watershed in the SWAT Model Instance resource type input files.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:DEMResolution:</strong>The resolution of the Digital Elevation Model in meters in the SWAT Model Instance resouce type input files.</li>
+                    <li><strong>hsterms:ModelInput / hsterms:simulationTimeStepValue:</strong>The time step value used for simulating the SWAT Model Instance resource.</li>
+                    <li><strong>hsterms:ModelInput / hsterms:watershedArea:</strong>The watershed area in Km&sup2 in the SWAT Model Instance resource input files.</li>
+                    <li><strong>hsterms:ModelInput / hsterms:numberOfSubbasins:</strong>The number of the subbasin within the watershed in the SWAT Model Instance resource input files.</li>
+                    <li><strong>hsterms:ModelInput / hsterms:numberOfHRUs:</strong>The number of the Hydrologic Response Units within the watershed in the SWAT Model Instance resource input files.</li>
+                    <li><strong>hsterms:ModelInput / hsterms:DEMResolution:</strong>The resolution of the Digital Elevation Model in meters in the SWAT Model Instance resouce input files.</li>
                     <li><strong>hsterms:ModelInput / hsterms:DEMSourceName:</strong>The source name for the Digitial Elevation Model data.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:DEMSourceURL:</strong>The source URL for the Digital Elevation Model data if exist.</li>
+                    <li><strong>hsterms:ModelInput / hsterms:DEMSourceURL:</strong>The source URL for the Digital Elevation Model data if applicable.</li>
                     <li><strong>hsterms:ModelInput / hsterms:landUseDataSourceName:</strong>The source name for the Landuse data.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:landUseDataSourceURL:</strong>The source URL for the Landuse data if exist.</li>
+                    <li><strong>hsterms:ModelInput / hsterms:landUseDataSourceURL:</strong>The source URL for the Landuse data if applicable.</li>
                     <li><strong>hsterms:ModelInput / hsterms:soilDataSourceName:</strong>The source name for Soil data.</li>
-                    <li><strong>hsterms:ModelInput / hsterms:soilDataSourceURL:</strong>The source URL for Soil data if exist.</li>
+                    <li><strong>hsterms:ModelInput / hsterms:soilDataSourceURL:</strong>The source URL for Soil data if applicable.</li>
                 </ul>
-            <li><strong>hsterms:ModelMethod:</strong>HydroShare class that includes all the metadata elements related to SWAT model methods used in the SWAT Model Instance resource type.</li>
+            <li><strong>hsterms:ModelMethod:</strong>HydroShare class that includes all the metadata elements related to SWAT model methods used in the SWAT Model Instance resource.</li>
                 <ul>
-                    <li><strong>hsterms:ModeMethod / hsterms:runoffCalculationMethod:</strong>The runoff calculation method used in the SWAT Model Instance resource type input files.</li>
-                    <li><strong>hsterms:ModelMethod / hsterms:flowRoutingMethod:</strong>The flow routing method used in the SWAT Model Instance resource type input files.</li>
-                    <li><strong>hsterms:ModelMethod / hsterms:PETEstimationMethod:</strong>The Potential EvapoTranspiration estimation method used in the SWAT Instance resource type input files.</li>
+                    <li><strong>hsterms:ModeMethod / hsterms:runoffCalculationMethod:</strong>The runoff calculation method used in the SWAT Model Instance resource input files.</li>
+                    <li><strong>hsterms:ModelMethod / hsterms:flowRoutingMethod:</strong>The flow routing method used in the SWAT Model Instance resource input files.</li>
+                    <li><strong>hsterms:ModelMethod / hsterms:PETEstimationMethod:</strong>The Potential EvapoTranspiration estimation method used in the SWAT Instance resource input files.</li>
                 </ul>
-            <li><strong>hsterms:ModelParameter:</strong>The parameters used in the model. For SWAT model, there are  control vocabularies: Crop rotation, Title drainage , Point source, Fertilizer,
+            <li><strong>hsterms:ModelParameter:</strong>The parameters used in the model. For SWAT model, there are control vocabularies: Crop rotation, Title drainage , Point source, Fertilizer,
                 Tilage operation, Inlet of draining watershed, Irrigation operation. Also the user can add any other parameters.</li>
         </ul>
     </p>
 
     <h3>Tools Resource Type Description</h3>
-    <div>[TODO:Describe tools resource type here]</div>
-    <div>[TODO:Describe tools resource type metadata terms here]</div>
 {% endblock %}
